--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cybermax",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,16 +10,17 @@
     "type": "git",
     "url": "git+https://github.com/RedFoxTrue/CyberMax.git"
   },
-  "author": "Yuri Nemirich",
+  "author": "Nemirich Yuri",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RedFoxTrue/CyberMax/issues"
   },
   "homepage": "https://github.com/RedFoxTrue/CyberMax#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
@@ -28,9 +29,6 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
-    "prettier": "2.0.5"
-  },
-  "dependencies": {
-    "gulp-clean-css": "^4.3.0"
+    "prettier": "^2.1.2"
   }
 }
